haxe (1:3.2.0+dfsg-1) unstable; urgency=low

  * Adopt package.
    + Set maintainer to myself.
  * Set Vcs-* fields to Haxe Foundation haxe-debian git repo.
  * New upstream version.
    + Update neko version dependency.
  * Remove outdated and discontinued emacs haxe mode.
  * Clean up copyright.
    + Remove entries of removed files.
  * Remove d/watch and get-orig-source target because the archive at Github is missing submodules.

 -- Andy Li <andy@onthewings.net>  Wed, 26 Aug 2015 15:01:06 +0800

haxe (1:3.0.0~svn6707+dfsg-1) unstable; urgency=medium

  * Adopt as Debian Flash Team (Closes: #742052).
    + Set maintainer to Debian Flash team, add myself to uploaders.
  * Set Vcs-* fields to updated collab-maint git repo.
  * Replace jquery-latest.min.js and swfobject.js with symlinks to system ones.
    + Remove sourceless files from upstream tarball (Closes: #736596).
    + Add libjs-jquery and libjs-swfobject runtime dependencies.
  * Convert d/copyright to format 1.0, thanks cme.
    + Add Files-Excluded to remove sourceless files.
  * Bump Standards-Version to 3.9.6 (no changes).
  * Move d/watch check to github, add get-orig-source target.

 -- Gabriele Giacone <1o5g4r8o@gmail.com>  Tue, 19 May 2015 19:00:57 +0200

haxe (1:3.0.0~svn6707-4) unstable; urgency=low

  * QA upload.
  * debian/haxe.install: Fix typo that resulted in misplaced .el files.
  * debian/rules: Comment out chmod call specifying odd /usr/lib permissions.

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 26 Jul 2013 21:26:38 -0400

haxe (1:3.0.0~svn6707-3) unstable; urgency=low

  * QA upload.
  * Upload to unstable.
  * Bytecompiling builds all archs. (Closes: #621890).

 -- Barry deFreese <bdefreese@debian.org>  Fri, 26 Jul 2013 09:04:49 -0400

haxe (1:3.0.0~svn6707-2) experimental; urgency=low

  * QA upload.
  * Bytecompile everything.

 -- Barry deFreese <bdefreese@debian.org>  Tue, 23 Jul 2013 11:05:26 -0400

haxe (1:3.0.0~svn6707-1) experimental; urgency=low

  * QA upload.